<?xml version="1.0"?>
<package format="2">
  <name>fanuc_post_processor_application</name>
  <version>0.0.1</version>
  <description>Application example of fanuc_post_processor_library</description>
  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>fanuc_post_processor_library</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>fanuc_post_processor_library</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>fanuc_post_processor_library</exec_depend>
</package>
