<?xml version="1.0"?>
<package format="2">
  <name>fanuc_post_processor_library</name>
  <version>0.0.1</version>
  <description>Fanuc post-processor</description>
  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>

  <export>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
</package>
